about page nearly completed - need final touches and links to other pages

--- a/global.css
+++ b/global.css
@@ -1,3 +1,5 @@
+/* ==GENERAL== */
+
 body {
   box-sizing: content-box;
   background-color: black;
@@ -10,6 +12,63 @@ body {
   height: 100%;
 }
 
+/* ==NAVIGATION== */
+
+.top-ribbon {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: auto;
+  height: 33vh;
+}
+.top-ribbon > div {
+  display: flex;
+  align-items: center;
+}
+
+.main-logo {
+  height: auto;
+  width: 10em;
+  padding: 0 1em;
+}
+.nametag {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+}
+.nametag > h3 {
+  color: darkgray;
+}
+.nametag * {
+  padding: 0;
+  margin: 0;
+}
+h1 a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 2em;
+}
+
+.nav-bar a {
+  text-decoration: none;
+  color: indianred;
+}
+.nav-bar {
+  display: flex;
+  list-style: none;
+  padding: 0 10em;
+}
+.nav-bar li {
+  padding: 1em 2em;
+  font-size: 14pt;
+}
+.nav-bar li:hover {
+  font-weight: 500;
+  border-bottom: 3px solid indianred;
+}
+
+/* ==FOOTER== */
 footer {
   background-color: gainsboro;
 }
