--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@ h1 a {
   padding: 3%;
   font-size: 16pt;
   font-style: italic;
-  color: teal;
+  color: gainsboro;
   border-top: 2px solid darkgray;
 }
 .homepage img {
