--- a/about.css
+++ b/about.css
@@ -6,7 +6,7 @@
 }
 .about-panel {
   display: grid;
-  grid-template: 1fr 1fr / 1fr 1fr;
+  grid-template: 1fr 2fr / 1fr 1fr;
   margin: 10% 0;
   place-items: center;
 }
@@ -26,7 +26,7 @@
   transform: translate(0 -20%);
   color: steelblue;
 }
-#color-correct {
+#color-correct-1 {
   color: ghostwhite;
 }
 
