--- a/global.css
+++ b/global.css
@@ -5,11 +5,13 @@ body {
   background-color: black;
   background-image: url(./assets/pw-background-1.jpg);
   background-size: cover;
-  color: indianred;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 99vw;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   opacity: 0.95;
-  height: 100%;
+  color: indianred;
 }
 
 /* ==NAVIGATION== */
@@ -19,7 +21,8 @@ body {
   justify-content: space-between;
   align-items: center;
   width: auto;
-  height: 33vh;
+  height: 25vh;
+  width: 99vw;
 }
 .top-ribbon > div {
   display: flex;
@@ -75,15 +78,64 @@ h1 a {
 /* ==FOOTER== */
 footer {
   background-color: gainsboro;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0;
+  bottom: 0;
+  padding: 0;
+  height: 33vh;
+  border-top: 0.5em solid darkgray;
+  border-bottom: 0.5em solid darkgray;
+}
+.contact-icons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  margin: 0% 15% 0% 15%;
+  padding: 0;
+}
+.contact-icons li {
+  padding: 5%;
+  margin: 5%;
+}
+.contact-icons a {
+  text-decoration: none;
+  font-weight: 600;
+  color: black;
+}
+.contact-icons a:hover {
+  border-bottom: 2px solid darkgray;
 }
 
 /* ==MEDIA QUERIES== */
 @media (max-width: 479px) {
-  /* CSS rules for screens 480px wide or smaller */
-}
-@media (max-width: 767px) {
-  /* CSS rules for screens 7680px wide or smaller */
-}
-@media (max-width: 1023px) {
-  /* CSS rules for screens 1024px wide or smaller */
+  .main-logo {
+    visibility: hidden;
+  }
+  .top-ribbon {
+    display: flex;
+    flex-direction: column;
+  }
+  .nav-bar {
+    flex-direction: column;
+  }
+
+  footer {
+    width: 100vw;
+    height: 20%;
+  }
+  .nametag > h1 {
+    scale: 55%;
+  }
+  .nametag > h3 {
+    visibility: none;
+  }
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
